--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,32 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>
-      Ionic Blank
+    <ion-title text-center>
+      <img src="../../assets/imgs/logo.png" height="30px">
     </ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content padding class="vmoffwhitebg">
+  <!-- <ion-list> -->
+
+    
+
+    <ion-grid>
+      <ion-row>
+        <ion-col col-12>
+          <ion-item>
+            <ion-input type="text" placeholder="Paste URL" [(ngModel)]="downloadLink"></ion-input>
+          </ion-item>
+        </ion-col>
+
+        <ion-col col-12 text-center>
+            <button ion-button icon-left outline class="btnoutlinepurple" (click)='downloadModel();'>
+              <ion-icon name="ios-cloud-download-outline"></ion-icon> Download
+            </button>
+        </ion-col>
+      </ion-row>
+
+    </ion-grid>
+  
+  <!-- </ion-list> -->
 </ion-content>
